Bluetooth-only invitations: simpler and more reliable.
Of course, not all devices support Bluetooth...

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -28,22 +28,13 @@
     <string name="format_last_connected">Last connected &lt;br /&gt; %1$s</string>
     <string name="add_contact_title">Add a Contact</string>
     <string name="your_nickname">Your nickname: </string>
-    <string name="wifi_not_available">Wi-Fi is NOT AVAILABLE</string>
-    <string name="wifi_disabled">Wi-Fi is OFF</string>
-    <string name="wifi_disconnected">Wi-Fi is DISCONNECTED</string>
-    <string name="format_wifi_connected">Wi-Fi is connected to %1$s</string>
-    <string name="bluetooth_not_available">Bluetooth is NOT AVAILABLE</string>
-    <string name="bluetooth_disabled">Bluetooth is OFF</string>
-    <string name="bluetooth_not_discoverable">Bluetooth is NOT DISCOVERABLE</string>
-    <string name="bluetooth_discoverable">Bluetooth is discoverable</string>
-    <string name="fact_to_face">For security reasons you must be face-to-face with someone to add them as a contact</string>
+    <string name="face_to_face">For security reasons you must be face-to-face with the person you want to add as a contact.\n\nThis will prevent anyone from impersonating you or reading your messages in future.</string>
     <string name="continue_button">Continue</string>
     <string name="your_invitation_code">Your invitation code is</string>
     <string name="enter_invitation_code">Please enter your contact\'s invitation code:</string>
-    <string name="format_connecting_wifi">Searching via %1$s\u2026</string>
-    <string name="connecting_bluetooth">Searching via Bluetooth\u2026</string>
+    <string name="searching_format">Searching for %1$s\u2026</string>
     <string name="connection_failed">Connection failed</string>
-    <string name="check_same_network">Please check that you are both using the same network</string>
+    <string name="could_not_find_contact">Briar could not find your contact nearby</string>
     <string name="try_again_button">Try again</string>
     <string name="connected_to_contact">Connected to contact</string>
     <string name="calculating_confirmation_code">Calculating confirmation code\u2026</string>
