Show empty list text for contact list, group list, etc. Dev task #71.

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -8,10 +8,6 @@
     <string name="choose_password">Choose your password:</string>
     <string name="confirm_password">Confirm your password:</string>
     <string name="password_too_weak">Password is too weak</string>
-    <string name="password_weak">Password is weak</string>
-    <string name="password_quite_weak">Password is quite weak</string>
-    <string name="password_quite_strong">Password is quite strong</string>
-    <string name="password_strong">Password is strong</string>
     <string name="passwords_do_not_match">Passwords do not match</string>
     <string name="enter_password">Enter your password:</string>
     <string name="try_again">Wrong password, try again:</string>
@@ -23,6 +19,7 @@
     <string name="synchronize_button">Synchronize</string>
     <string name="sign_out_button">Sign Out</string>
     <string name="contact_list_title">Contacts</string>
+    <string name="no_contacts">No contacts</string>
     <string name="contact_connected">Connected</string>
     <string name="format_last_connected">Last connected &lt;br /&gt; %s</string>
     <string name="add_contact_title">Add a Contact</string>
@@ -44,13 +41,12 @@
     <string name="codes_do_not_match">Codes do not match</string>
     <string name="interfering">This could mean that someone is trying to interfere with your connection</string>
     <string name="contact_added_toast">Contact added</string>
+    <string name="no_private_messages">No messages</string>
     <string name="private_message_hint">Type message</string>
     <string name="message_sent_toast">Message sent</string>
-    <string name="read_message_title">Private Message</string>
-    <string name="write_message_title">New Private Message</string>
     <string name="format_from">From: %s</string>
-    <string name="new_contact_item">New contact\u2026</string>
     <string name="forums_title">Forums</string>
+    <string name="no_forums">No forums</string>
     <plurals name="forums_available">
         <item quantity="one">%d forum available from contacts</item>
         <item quantity="other">%d forums available from contacts</item>
@@ -62,19 +58,18 @@
     <string name="forum_visible_to_all">Share this forum with all contacts</string>
     <string name="forum_visible_to_some">Share this forum with chosen contacts</string>
     <string name="done_button">Done</string>
-    <string name="new_post_title">New Post</string>
     <string name="from">From:</string>
     <string name="anonymous">Anonymous</string>
     <string name="new_identity_item">New identity\u2026</string>
     <string name="group_post_hint">Type forum post</string>
-    <string name="manage_subscriptions_title">Available Forums</string>
-    <string name="no_forums_available">No forums available from contacts</string>
+    <string name="manage_forums_title">Available Forums</string>
+    <string name="no_forums_available">No forums available</string>
     <string name="subscribed_all">Subscribed, shared with all contacts</string>
     <string name="subscribed_some">Subscribed, shared with chosen contacts</string>
     <string name="not_subscribed">Not subscribed</string>
     <string name="new_identity_title">New Identity</string>
     <string name="create_button">Create</string>
-    <string name="no_contacts">You don\'t have any contacts. Add a contact now?</string>
+    <string name="no_contacts_prompt">You don\'t have any contacts. Add a contact now?</string>
     <string name="add_button">Add</string>
     <string name="cancel_button">Cancel</string>
     <string name="post_sent_toast">Post sent</string>
