Added a settings screen and a setting for activating Bluetooth. Bug #28.

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -16,8 +16,9 @@
     <string name="expiry_warning">This software has expired.\nPlease install a newer version.</string>
     <string name="contact_list_button">Contacts</string>
     <string name="forums_button">Forums</string>
-    <string name="testing_button">Testing</string>
+    <string name="settings_button">Settings</string>
     <string name="sign_out_button">Sign Out</string>
+    <string name="testing_button">Testing</string>
     <string name="contact_list_title">Contacts</string>
     <string name="no_contacts">No contacts</string>
     <string name="contact_connected">Connected</string>
@@ -79,4 +80,7 @@
     <string name="private_message_notification_text">Touch to show.</string>
     <string name="group_post_notification_title">New forum post</string>
     <string name="group_post_notification_text">Touch to show.</string>
+    <string name="settings_title">Settings</string>
+    <string name="activate_bluetooth_option">Activate Bluetooth while signed in</string>
+    <string name="activate_bluetooth_explanation">Briar uses Bluetooth to communicate with nearby contacts</string>
 </resources>
