--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="startup_failed_notification_text">You may need to reinstall Briar.</string>
     <string name="expiry_warning">This software has expired.\nPlease install a newer version.</string>
     <string name="contact_list_button">Contacts</string>
+    <string name="delete_contact">Delete contact</string>
+    <string name="contact_deleted_toast">Contact deleted</string>
     <string name="forums_button">Forums</string>
     <string name="settings_button">Settings</string>
     <string name="sign_out_button">Sign Out</string>
