Simpler forum sharing UX.

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -11,8 +11,10 @@
     <string name="name_too_long">Name is too long</string>
     <string name="password_too_weak">Password is too weak</string>
     <string name="passwords_do_not_match">Passwords do not match</string>
+    <string name="create_account_button">Create Account</string>
     <string name="enter_password">Enter your password:</string>
     <string name="try_again">Wrong password, try again:</string>
+    <string name="sign_in_button">Sign In</string>
     <string name="startup_failed_notification_title">Briar could not start</string>
     <string name="startup_failed_notification_text">You may need to reinstall Briar.</string>
     <string name="expiry_warning">This software has expired.\nPlease install a newer version.</string>
@@ -33,7 +35,7 @@
     <string name="searching_format">Searching for %06d\u2026</string>
     <string name="connection_failed">Connection failed</string>
     <string name="could_not_find_contact">Briar could not find your contact nearby</string>
-    <string name="try_again_button">Try again</string>
+    <string name="try_again_button">Try Again</string>
     <string name="connected_to_contact">Connected to contact</string>
     <string name="calculating_confirmation_code">Calculating confirmation code\u2026</string>
     <string name="your_confirmation_code">Your confirmation code is</string>
@@ -49,45 +51,40 @@
     <string name="format_from">From: %s</string>
     <string name="forums_title">Forums</string>
     <string name="no_forums">No forums</string>
-    <plurals name="forums_available">
-        <item quantity="one">%d forum available from contacts</item>
-        <item quantity="other">%d forums available from contacts</item>
+    <plurals name="forums_shared">
+        <item quantity="one">%d forum shared by contacts</item>
+        <item quantity="other">%d forums shared by contacts</item>
     </plurals>
-    <string name="no_posts">No posts</string>
-    <string name="subscribe_to_this_forum">Subscribe to this forum</string>
-    <string name="no_subscribers">No contacts subscribe to this forum</string>
-    <plurals name="subscribers">
-        <item quantity="one">%d contact subscribes to this forum:</item>
-        <item quantity="other">%d contacts subscribe to this forum:</item>
-    </plurals>
-    <string name="public_space_warning">Forums are public spaces. There may be other subscribers who are not your contacts.</string>
+    <string name="unsubscribe">Unsubscribe</string>
+    <string name="unsubscribed_toast">Unsubscribed</string>
+    <string name="no_forum_posts">No posts</string>
     <string name="create_forum_title">New Forum</string>
     <string name="choose_forum_name">Choose a name for your forum:</string>
-    <string name="forum_visible_to_all">Share this forum with all contacts</string>
-    <string name="forum_visible_to_some">Share this forum with chosen contacts</string>
-    <string name="done_button">Done</string>
+    <string name="create_forum_button">Create Forum</string>
     <string name="forum_created_toast">Forum created</string>
+    <string name="forum_share_with_all">Share this forum with all contacts</string>
+    <string name="forum_share_with_some">Share this forum with chosen contacts</string>
+    <string name="share_button">Share Forum</string>
     <string name="from">From:</string>
     <string name="anonymous">Anonymous</string>
     <string name="new_identity_item">New identity\u2026</string>
-    <string name="group_post_hint">Type forum post</string>
-    <string name="manage_forums_title">Available Forums</string>
-    <string name="no_forums_available">No forums available</string>
-    <string name="subscribed_all">Subscribed, shared with all contacts</string>
-    <string name="subscribed_some">Subscribed, shared with chosen contacts</string>
-    <string name="not_subscribed">Not subscribed</string>
     <string name="new_identity_title">New Identity</string>
-    <string name="create_button">Create</string>
+    <string name="create_identity_button">Create Identity</string>
     <string name="identity_created_toast">Identity created</string>
+    <string name="forum_post_hint">Type forum post</string>
+    <string name="available_forums_title">Available Forums</string>
+    <string name="subscribed_toast">Subscribed</string>
+    <string name="shared_by_format">Shared by %s</string>
     <string name="no_contacts_prompt">You don\'t have any contacts. Add a contact now?</string>
     <string name="add_button">Add</string>
     <string name="cancel_button">Cancel</string>
-    <string name="post_sent_toast">Post sent</string>
+    <string name="done_button">Done</string>
+    <string name="post_sent_toast">Forum post sent</string>
     <plurals name="private_message_notification_text">
         <item quantity="one">New private message.</item>
         <item quantity="other">%d new private messages.</item>
     </plurals>
-    <plurals name="group_post_notification_text">
+    <plurals name="forum_post_notification_text">
         <item quantity="one">New forum post.</item>
         <item quantity="other">%d new forum posts.</item>
     </plurals>
