Show current step and total number of steps when adding a contact.
UI was transferred into XML files
and lots of redundant code was deleted such as the custom CodeEntryView.

Closes #33

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="continue_button">Continue</string>
     <string name="your_invitation_code">Your invitation code is</string>
     <string name="enter_invitation_code">Please enter your contact\'s invitation code:</string>
-    <string name="searching_format">Searching for %06d\u2026</string>
+    <string name="searching_format">Searching for contact with invitation code %06d\u2026</string>
     <string name="connection_failed">Connection failed</string>
     <string name="could_not_find_contact">Briar could not find your contact nearby</string>
     <string name="try_again_button">Try Again</string>
@@ -111,6 +111,7 @@
     <string name="notify_sound_setting_default">Default ringtone</string>
     <string name="notify_sound_setting_disabled">None</string>
     <string name="choose_ringtone_title">Choose ringtone</string>
+    <string name="step">Step %1$d/%2$d</string>
 
     <!-- Dialogs -->
     <string name="dialog_title_lost_password">Lost password</string>
