--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -113,5 +113,5 @@
 
     <!-- Dialogs -->
     <string name="dialog_title_lost_password">Lost password</string>
-    <string name="dialog_message_lost_password">Password recovery is not possible. Do you wish to delete your user and re-register ?</string>
+    <string name="dialog_message_lost_password">Password recovery is not possible. Do you wish to delete your user, all contacts, and re-register ?</string>
 </resources>
